<resources>
    <string name="app_name">Demo</string>

    <!-- home -->
    <string name="title_home">Received Events</string>
    <string name="title_received">Received Events</string>
    <string name="watch_event_content">started</string>
    <string name="create_event_content">created a repository</string>
    <string name="fork_event_content">forked</string>
    <string name="member_event_content">added</string>
    <string name="push_event_content">pushed to</string>
    <string name="public_event_content">made</string>

    <string name="title_normal_event"><Data><![CDATA[%1$s&nbsp;&nbsp;<font color="#303030"><b>%2$s</b></font>]]></Data></string>
    <string name="title_fork_event"><Data><![CDATA[%1$s&nbsp;&nbsp;<font color="#303030"><b>%2$s</b></font>&nbsp;&nbsp;from&nbsp;&nbsp;<font color="#303030"><b>%3$s</b></font>]]></Data></string>
    <string name="title_push_event"><Data><![CDATA[%1$s&nbsp;&nbsp;<font color="#303030"><b>%2$s</b></font>&nbsp;&nbsp;in&nbsp;&nbsp;<font color="#303030"><b>%3$s</b></font>]]></Data></string>
    <string name="title_public_event"><Data><![CDATA[%1$s&nbsp;&nbsp;<font color="#303030"><b>%2$s</b></font>&nbsp;&nbsp;public]]></Data></string>
    <string name="watchers_count">star(%1$d)</string>

    <!-- mine -->
    <string name="title_mine">Mine</string>
    <string name="mine_item_repositories">Repositories</string>
    <string name="mine_item_stars">Stars</string>
    <string name="mine_item_followers">Followers</string>
    <string name="mine_item_following">Following</string>
    <string name="mine_item_settings">Settings</string>

    <!-- Trending-->
    <string name="title_trending">Trending</string>
    <string name="stars_count">Stars(%1$d)</string>
    <string name="forks_count">Forks(%1$d)</string>
    <string name="open_issues_count">Issues(%1$d)</string>
    <string name="trending_today">%1$d stars today</string>
    <string name="trending_this_week">%1$d stars this week</string>
    <string name="trending_this_month">%1$d stars this month</string>

    <!-- settings -->
    <string name="title_settings">Settings</string>
    <string name="settings_item_language">Language</string>
    <string name="settings_item_about">About</string>
    <string name="settings_item_sign_out">Sign Out</string>

    <!-- repos info-->
    <string name="title_repos">Repository</string>
    <string name="repos_title_readme">README</string>
    <string name="repos_readme_loading">Loading&#8230;</string>
    <string name="repos_latest_commit">Latest commit about %1$s.</string>

    <!-- user repository list -->
    <string name="title_repos_list">Repositories</string>

</resources>
